diesel_compile_tests/tests/fail/derive/queryable_type_missmatch.stderr
error[E0277]: the trait bound `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>): load_dsl::private::CompatibleType<UserWithToFewFields, _>` is not satisfied
  --> tests/fail/derive/queryable_type_missmatch.rs:59:26
   |
59 |     let _ = users::table.load::<UserWithToFewFields>(conn);
   |                          ^^^^ the trait `load_dsl::private::CompatibleType<UserWithToFewFields, _>` is not implemented for `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
   |
   = help: the following implementations were found:
             <(ST0, ST1, ST2) as load_dsl::private::CompatibleType<__T, __DB>>
   = note: required because of the requirements on the impl of `LoadQuery<'_, _, UserWithToFewFields>` for `users::table`

error[E0277]: the trait bound `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>): load_dsl::private::CompatibleType<UserWithToManyFields, _>` is not satisfied
  --> tests/fail/derive/queryable_type_missmatch.rs:61:26
   |
61 |     let _ = users::table.load::<UserWithToManyFields>(conn);
   |                          ^^^^ the trait `load_dsl::private::CompatibleType<UserWithToManyFields, _>` is not implemented for `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
   |
   = help: the following implementations were found:
             <(ST0, ST1, ST2) as load_dsl::private::CompatibleType<__T, __DB>>
   = note: required because of the requirements on the impl of `LoadQuery<'_, _, UserWithToManyFields>` for `users::table`

error[E0277]: the trait bound `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>): load_dsl::private::CompatibleType<UserWrongOrder, _>` is not satisfied
  --> tests/fail/derive/queryable_type_missmatch.rs:63:26
   |
63 |     let _ = users::table.load::<UserWrongOrder>(conn);
   |                          ^^^^ the trait `load_dsl::private::CompatibleType<UserWrongOrder, _>` is not implemented for `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
   |
   = help: the following implementations were found:
             <(ST0, ST1, ST2) as load_dsl::private::CompatibleType<__T, __DB>>
   = note: required because of the requirements on the impl of `LoadQuery<'_, _, UserWrongOrder>` for `users::table`

error[E0277]: the trait bound `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>): load_dsl::private::CompatibleType<UserTypeMissmatch, _>` is not satisfied
  --> tests/fail/derive/queryable_type_missmatch.rs:65:26
   |
65 |     let _ = users::table.load::<UserTypeMissmatch>(conn);
   |                          ^^^^ the trait `load_dsl::private::CompatibleType<UserTypeMissmatch, _>` is not implemented for `(diesel::sql_types::Integer, diesel::sql_types::Text, diesel::sql_types::Nullable<diesel::sql_types::Text>)`
   |
   = help: the following implementations were found:
             <(ST0, ST1, ST2) as load_dsl::private::CompatibleType<__T, __DB>>
   = note: required because of the requirements on the impl of `LoadQuery<'_, _, UserTypeMissmatch>` for `users::table`
